# sensors-pkg

./: CMakeLists.txt  README.md
Claraquino/: main.cpp
GenericSensor/: CGenericSensor.cpp  CGenericSensor.h  CMakeLists.txt  main.cpp
IMU_XSens/: CIMU_XSensApp.cpp  CIMU_XSensApp.h  CMakeLists.txt  main.cpp
NIDAQ/: CMakeLists.txt  CNIDAQApp.cpp  CNIDAQApp.h  main.cpp
PhidgetsEncoders/: CMakeLists.txt  CPhidgetsEncoders.cpp  CPhidgetsEncoders.h  PhisgetsEncoders_example.moos  main.cpp
StereoFlyCap/: CMakeLists.txt  CStereoFlyCapApp.cpp  CStereoFlyCapApp.h  StereoFlyCap_example.moos  StereoFlyCap_sharedmem.moos  main.cpp
cmakemodules/: FindPHIDGETS.cmake
missions/: GenericSensor_CameraOpenCV.moos  GenericSensor_GPS.moos
