# File: CMakeListst.txt for module StereoFlyCap
PROJECT(StereoFlyCap)

# Use MRPT:
FIND_PACKAGE( MRPT REQUIRED hwdrivers vision )

FIND_PACKAGE(OpenCV REQUIRED )
INCLUDE_DIRECTORIES(${OpenCV_INCLUDE_DIRS})

INCLUDE_DIRECTORIES( ${MOOS_INCLUDE_DIRS}  )
LINK_DIRECTORIES( ${MOOS_LIBRARY_DIRS} )

# Add executable
ADD_EXECUTABLE( ${PROJECT_NAME}
	main.cpp
	CStereoFlyCapApp.h CStereoFlyCapApp.cpp
	)

# Link the executable
TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${MOOS_LIBRARIES} ${MRPT_LIBS} ${OpenCV_LIBS})
